--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,14 @@
     To create a production bundle, use `npm run build` or `yarn build`.
   -->
   <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_KEY%&v=3.exp&libraries=geometry,drawing,places"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76237766-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-76237766-1');
+  </script>
 </body>
 
 </html>
