--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div data-js="root"></div>
   <!--
     This HTML file is a template.
     If you open it directly in the browser, you will see an empty page.
